# ximea_feature_detection

./: .gitignore  README.md
ximea_odom_utils/: package.xml  setup.cfg  setup.py
ximea_odom_utils/ximea_odom_utils/: bag_frame_extractor.py
ximea_odometry/: CMakeLists.txt  package.xml
ximea_odometry/include/ximea_odometry/: lbp.hpp  ximea_feature_detection.hpp  ximea_optical_flow.hpp
ximea_odometry/src/: lbp.cpp  lbp_test.cpp  ximea_feature_detection.cpp  ximea_optical_flow.cpp
